[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Graphics/Tilemap/Tilemap.png" type="Texture" id=1]
[ext_resource path="res://Scenes/BreakBlock/BreakBlock.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/Coin/Coin.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.745098, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="BreakBlock" type="Node2D"]
script = ExtResource( 2 )

[node name="Body" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="BreakParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 6, 6 )
direction = Vector2( 0, -1 )
gravity = Vector2( 0, 300 )
initial_velocity = 50.0
scale_amount = 2.0
scale_amount_curve = SubResource( 4 )
color = Color( 0.764706, 0.313726, 0.235294, 1 )

[node name="CoinParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
explosiveness = 1.0
texture = ExtResource( 3 )
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 60.0
damping = 100.0
